WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
51096
REGRESSION (
r60822
): caps-lock-indicator is accepted as a -webkit-appearance value
https://bugs.webkit.org/show_bug.cgi?id=51096
Summary
REGRESSION (r60822): caps-lock-indicator is accepted as a -webkit-appearance ...
mitz
Reported
2010-12-14 22:55:28 PST
REGRESSION (
r60822
): caps-lock-indicator is accepted as a -webkit-appearance value
Attachments
Patch
(4.57 KB, patch)
2010-12-14 23:00 PST
,
mitz
mjs
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2010-12-14 22:56:40 PST
<
rdar://problem/8767193
> Patch forthcoming.
mitz
Comment 2
2010-12-14 23:00:45 PST
Created
attachment 76632
[details]
Patch
Maciej Stachowiak
Comment 3
2010-12-14 23:06:28 PST
Comment on
attachment 76632
[details]
Patch r=me
mitz
Comment 4
2010-12-14 23:11:37 PST
Fixed in <
http://trac.webkit.org/projects/webkit/changeset/74099
>.
WebKit Review Bot
Comment 5
2010-12-15 00:40:34 PST
http://trac.webkit.org/changeset/74099
might have broken Chromium Win Release
Antonio Gomes
Comment 6
2011-06-21 10:31:55 PDT
***
Bug 43931
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug