<rdar://problem/8767193> REGRESSION (r60822): caps-lock-indicator is accepted as a -webkit-appearance value https://bugs.webkit.org/show_bug.cgi?id=51096

Reviewed by Maciej Stachowiak.

WebCore:

Test: fast/css/appearance-caps-lock-indicator.html

* css/CSSValueKeywords.in: Moved caps-lock-indicator outside the range of values that should be
accepted by the parser, and added comments about maintaining the list of appearance values.
* platform/ThemeTypes.h: Moved CapsLockIndicatorPart to the end of the ControlPart enum.

LayoutTests:

* fast/css/appearance-caps-lock-indicator-expected.txt: Added.
* fast/css/appearance-caps-lock-indicator.html: Added.



Canonical link: https://commits.webkit.org/64446@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74099 268f45cc-cd09-0410-ab3c-d52691b4dbfc